# malamute

./: .editorconfig  .gitignore  .travis.yml  AMQP.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  Dockerfile.in  Jenkinsfile  MALAMUTE.md  Makefile.am  NEWS  README.md  STREAM.md  acinclude.m4  autogen.sh  ci_build.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  meson.build  project.gyp  project.xml  setup.py  version.sh
.github/workflows/: CI.yaml
.obs/: workflows.yml
api/: mlm_client.api  mlm_client.xml  mlm_proto.api  mlm_proto.xml  python_cffi.slurp
bindings/jni/: .gitignore  CMakeLists.txt  Findmalamute.cmake  README.md  build.gradle  ci_build.sh  settings.gradle
bindings/jni/android/: CMakeLists.txt  build.sh
bindings/jni/gradle/wrapper/: gradle-wrapper.properties
bindings/jni/mlm-jni/: CMakeLists.txt  Findmalamute.cmake  build.gradle
bindings/jni/mlm-jni-all/: build.gradle
bindings/jni/mlm-jni-native/: build.gradle
bindings/jni/mlm-jni/android/: CMakeLists.txt  build.sh
bindings/jni/mlm-jni/src/main/c/: org_zeromq_mlm_MlmClient.c  org_zeromq_mlm_MlmProto.c
bindings/jni/mlm-jni/src/main/java/org/zeromq/mlm/: MlmClient.java  MlmProto.java
bindings/jni/mlm-jni/src/test/java/org/zeromq/mlm/: MlmClientTest.java  MlmProtoTest.java
bindings/jni/msvc/: configure.bat  resource.rc
bindings/jni/msvc/vs2010/: build.bat  malamute.sln
bindings/jni/msvc/vs2010/libmlmjni/: libmlmjni.props  libmlmjni.vcxproj
bindings/jni/msvc/vs2012/: build.bat  call_javah.bat  malamute.sln
bindings/jni/msvc/vs2012/libmlmjni/: libmlmjni.props  libmlmjni.vcxproj
bindings/jni/msvc/vs2013/: build.bat  malamute.sln
bindings/jni/msvc/vs2013/libmlmjni/: libmlmjni.vcxproj  libmlmjni.vcxproj.filters
bindings/jni/msvc/vs2015/: build.bat  call_javah.bat  malamute.sln
bindings/jni/msvc/vs2015/libmlmjni/: libmlmjni.vcxproj
bindings/jni/src/main/c/: org_zeromq_mlm_MlmClient.c  org_zeromq_mlm_MlmProto.c
bindings/jni/src/main/java/org/zeromq/mlm/: MlmClient.java  MlmProto.java
bindings/jni/src/test/java/org/zeromq/mlm/: MlmClientTest.java  MlmProtoTest.java
bindings/lua_ffi/: malamute_ffi.lua  test.lua
bindings/nodejs/: README.md  binding.cc  binding.gyp  binding.h  build.sh  package.json
bindings/python/: README.md  _project.py  malamute.py  malamute_client.py  setup.py  test_malamute.py
bindings/python/malamute/: __init__.py  _malamute_ctypes.py
bindings/python_cffi/: README.md  malamute_cffi.py  setup.py
bindings/python_cffi/malamute_cffi/: MlmClient.py  MlmProto.py  __init__.py  _cdefs.inc  build.py  cdefs.py  dlopen.py
bindings/qml/: README.md  qml_malamute_bindings.pro
bindings/qml/src/: QmlMlmClient.cpp  QmlMlmClient.h  QmlMlmProto.cpp  QmlMlmProto.h  qml_malamute_plugin.h  qmldir
bindings/qml/test/: tst_QmlMalamute.qml
bindings/qt/: README.md  common.pri  config.pri  qmalamute.pro
bindings/qt/buildlib/: buildlib.pro
bindings/qt/selftest/: main.cpp  selftest.pro
bindings/qt/src/: qmalamute.h  qmalamute.pri  qmlmclient.cpp  qmlmclient.h  qmlmproto.cpp  qmlmproto.h  qzactor.cpp  qzactor.h  qzframe.cpp  qzframe.h  qzmsg.cpp  qzmsg.h  qzsock.cpp  qzsock.h
bindings/ruby/lib/malamute/: ffi.rb
bindings/ruby/spec/: ffi_spec.rb  spec_helper.rb
builds/android/: Android.mk  build.sh
builds/check_zproject/: ci_build.sh
builds/check_zproto/: ci_build.sh
builds/cmake/: ci_build.sh
builds/cygwin/: Makefile.cygwin
builds/debian/: control  malamute.dsc  rules
builds/gyp/: platform.h  project.gyp
builds/mingw32/: Makefile.mingw32
builds/msvc/: configure.bat  platform.h  resource.rc
builds/msvc/nuget/: package.nuspec  package.targets  package.xml
builds/msvc/vs2008/malamute/: malamute.sln  malamute.vcproj
builds/msvc/vs2010/: build.bat  malamute.import.props  malamute.sln
builds/msvc/vs2010/libmlm/: libmlm.import.xml  libmlm.vcxproj
builds/msvc/vs2010/malamute/: malamute.import.xml  malamute.props  malamute.vcxproj  malamute.vcxproj.filters
builds/msvc/vs2010/malamute_selftest/: malamute_selftest.vcxproj
builds/msvc/vs2012/: build.bat  malamute.import.props  malamute.sln
builds/msvc/vs2013/: build.bat  malamute.sln
builds/msvc/vs2015/: build.bat  malamute.import.props  malamute.sln
builds/qt-android/: android_build_helper.sh  build.sh
builds/spec/: malamute.spec
builds/static/: Dockerfile  build.sh
builds/valgrind/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  malamute.adoc  malamute.doc  malamute.txt  mkman  mlm_client.doc  mlm_client.txt  mlm_msg.doc  mlm_msg.txt  mlm_perftest.doc  mlm_perftest.txt  mlm_proto.doc  mlm_proto.txt  mlm_server.doc  mlm_server.txt  mlm_stream_simple.doc  mlm_stream_simple.txt  mlm_tutorial.doc  mlm_tutorial.txt  mshell.doc  mshell.txt  zbits.doc  zbits.txt
include/: Makefile.am  malamute.h  mlm_client.h  mlm_library.h  mlm_msg.h  mlm_proto.h  mlm_server.h
issues/: issue_81.c  issue_84  issue_84.c  issue_87.c  issue_93.c  malamute.cfg
issues/issue_213/: build.sh  reproduce.c
issues/issue_45/: .gitignore  malamute.cfg  mlm_perf_recv.c  mlm_perf_send.c  test.sh
packaging/debian/: Malamute-dev.install  Malamute.install  changelog  control  copyright  libmlm-dev.install  libmlm0.install  libmlm1.install  malamute.dsc  malamute.dsc.obs  malamute.install  malamute.manpages  rules
packaging/obs/: _service
packaging/redhat/: malamute.spec
src/: .gitignore  Makefile.am  Makemodule.am  libmlm.pc.in  license.xml  malamute.c  malamute.cfg  malamute.cfg.in  malamute.service.in  mlm_classes.h  mlm_client.c  mlm_client.cfg  mlm_client.dot  mlm_client.xml  mlm_client_custom.xml  mlm_client_engine.inc  mlm_mailbox_bounded.c  mlm_mailbox_bounded.h  mlm_mailbox_simple.c  mlm_mailbox_simple.h  mlm_msg.bnf  mlm_msg.c  mlm_msg.h  mlm_msg.xml  mlm_msgq.c  mlm_msgq.h  mlm_perftest.c  mlm_private_selftest.c  mlm_proto.bnf  mlm_proto.c  mlm_proto.xml  mlm_selftest.c  mlm_server.c  mlm_server.dot  mlm_server.xml  mlm_server_engine.inc  mlm_stream_simple.c  mlm_stream_simple.h  mlm_tutorial.c  mshell.c  (+7 more)
src/labs/: zbits.c  zbits.h
tests/: mlm_tests.c
(+38 files in other folders)
